commit 2, the sign in page has been implemented

--- a/src/app/signin/signin.page.html
+++ b/src/app/signin/signin.page.html
@@ -1,13 +1,48 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>signin</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">signin</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+
+
+<div class="container">
+  <ion-card>
+    <div class="logo-container">
+      <ion-img class="logo" src="assets/logo.png"></ion-img>       
+    </div>
+
+    <ion-list [inset]="true">
+    
+      <ion-item>
+        <ion-input label="Email" label-placement="floating" fill="solid" placeholder="Enter mail">
+          <ion-icon slot="start" name="mail" aria-hidden="true"></ion-icon>
+        </ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-input labelPlacement="floating" label="Password" fill="solid" type="Password" placeholder="Enter Password">
+          <ion-icon slot="start" name="lock-closed" aria-hidden="true"></ion-icon>
+          <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <!-- Empty ion item -->
+      </ion-item>
+
+    </ion-list>
+
+    
+
+    <div class="button-container">
+      <ion-button color="danger" routerLink="/welcome">Cancel</ion-button>
+      <ion-button color="tertiary">Sign in</ion-button>
+    </div>
+  
+    
+  </ion-card>
+</div>
+
+
+
+
+
+
+
+
