--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -27,7 +27,8 @@
                 </ion-toolbar>
             </ion-header>
             <ion-content>
-                <p>
+        
+                <p class="ion-padding">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum quidem recusandae ducimus quos
                 reprehenderit. Veniam, molestias quos, dolorum consequuntur nisi deserunt omnis id illo sit cum qui. Eaque,
                 dicta.
