commit 3, i added expeience to the form and established authentication with firebase and created a database in firestore

--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,59 +1,73 @@
+<div class="container">
+  <ion-card>
+    <div class="logo-container">
+      <ion-img class="logo" src="assets/logo.png"></ion-img>       
+    </div>
 
-
-
-  <div class="container">
-    <ion-card>
-      <div class="logo-container">
-        <ion-img class="logo" src="assets/logo.png"></ion-img>       
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-input [formControl]="name" label="Name" label-placement="floating" fill="" placeholder="Enter Your Name" >
+          <ion-icon slot="start" name="person" aria-hidden="true"></ion-icon>
+        </ion-input> 
+      </ion-item>
+      <div [class.visible]="name.invalid && name.touched" class="error" >
+        your name is required
       </div>
-  
-      <ion-list [inset]="true">
-        <ion-item>
-          <ion-input label="Name" label-placement="floating" fill="" placeholder="Enter Your Name">
-            <ion-icon slot="start" name="person" aria-hidden="true"></ion-icon>
-          </ion-input>
-        </ion-item>
-      
-        <ion-item>
-          <ion-input label="Phone Number" label-placement="floating" fill="" placeholder="Enter Phone number">
-            <ion-icon slot="start" name="call" aria-hidden="true"></ion-icon>
-          </ion-input>
-        </ion-item>
-      
-        <ion-item>
-          <ion-input label="Email" label-placement="floating" fill="" placeholder="Enter mail">
-            <ion-icon slot="start" name="mail" aria-hidden="true"></ion-icon>
-          </ion-input>
-        </ion-item>
-      
-        <ion-item>
-          <ion-input labelPlacement="stacked" label="Password" fill="" type="Password" placeholder="Enter Password">
-            <ion-icon slot="start" name="lock-closed" aria-hidden="true"></ion-icon>
-            <ion-input-password-toggle slot="end"></ion-input-password-toggle>
-          </ion-input>
-        </ion-item>
-  
-        <ion-item>
-          <!-- Empty ion item -->
-        </ion-item>
-  
-      </ion-list>
-
       
 
-      <div class="button-container">
-        <ion-button color="danger" routerLink="/welcome">Cancel</ion-button>
-        <ion-button color="tertiary">Submit</ion-button>
+    
+      <ion-item>
+        <ion-input [formControl]="phone"  label="Phone Number" label-placement="floating" fill="" placeholder="Enter Phone number">
+          <ion-icon slot="start" name="call" aria-hidden="true"></ion-icon>
+        </ion-input>
+      </ion-item>
+      <div [class.visible]="phone.invalid && phone.touched"  class="error" >
+        Please input a valid Phone number
+      </div>
+      
+    
+      <ion-item>
+        <ion-input [formControl]="email" label="Email" label-placement="floating" fill="" placeholder="Enter mail">
+          <ion-icon slot="start" name="mail" aria-hidden="true"></ion-icon>
+        </ion-input>
+
+      </ion-item>
+      <div [class.visible]="email.invalid && email.touched"  class="error" >
+        Please input a valid email address
       </div>
     
-      
-    </ion-card>
-  </div>
+      <ion-item>
+        <ion-input [formControl]="password" labelPlacement="stacked" label="Password" fill="" type="Password" placeholder="Enter Password">
+          <ion-icon slot="start" name="lock-closed" aria-hidden="true"></ion-icon>
+          <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+        </ion-input>
+      </ion-item>
+      <div [class.visible]="password.invalid && password.touched"  class="error" >
+        Password must be at least 6 characters<br> 
+        with letters, numbers & a special character.
+      </div>
 
-  
+      <ion-item>
+        <!-- Empty ion item -->
+      </ion-item>
 
-  
+    </ion-list>
 
+    
+
+    <div class="button-container">
+      <ion-button  color="danger" routerLink="/welcome">Cancel</ion-button>
+      <ion-button color="tertiary"  [class.disabled]="name.invalid || email.invalid || password.invalid || phone.invalid " (click)="onSubmit()">Submit</ion-button>
+    </div>  
   
+    
+  </ion-card>
+</div>
+
+
+
+
+
+
 
 
