--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,54 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+
+.button-container {
+  display: flex;
+  width:100%;
+  justify-content:space-between;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.action-buttons{
+  --padding-bottom:0px;
+  --padding-start:20px;
+  --padding-end:20px;
+  --padding-top:0px;
+  border-radius: 50px;
+  font-size: 13px;
+  font-weight: bold;
+  --background:#6d74f3;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-item {
+  --padding-start: 0;
 }
 
-#container a {
-  text-decoration: none;
-}
+.detail-container {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
+  width: 100%;
+
+  .icon{
+    width:40px;
+  }
+
+  .desc{
+    display: inline-block;
+
+    .name{
+      p{
+        font-weight:bold;
+      }
+    }
+    
+
+      
+      }
+
+      .amount{
+        p{
+          font-weight:bold;
+        }
+      }
+  }
+
